Fix: code refactor & clean-up